bug: update release drafter with correct settings

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,12 +1,28 @@
 name-template: '$RESOLVED_VERSION'
 tag-template: '$RESOLVED_VERSION'
 categories:
+  - title: 'Breaking Changes'
+    label: 'breaking'
   - title: 'Features'
     label: 'feature'
   - title: 'Bug Fixes'
     label: 'bug'
   - title: 'Maintenance'
     labels:
+      - 'build'
+      - 'documentation'
+      - 'refactor'
+      - 'test'
+version-resolver:
+  major:
+    labels:
+      - 'breaking'
+  minor:
+    labels:
+      - 'feature'
+  patch:
+    labels:
+      - 'bug'
       - 'build'
       - 'documentation'
       - 'refactor'
