--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@
 [tool.poetry.dependencies]
   python = "^3.9"
 
+[tool.poetry.group.dev.dependencies]
+  pre-commit = "^3.7.1"
+
 [build-system]
   build-backend = "poetry.core.masonry.api"
   requires      = ["poetry-core"]
