--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@
   version     = "0.1.0"
 
 [tool.poetry.dependencies]
+  numpy  = "^2.0.0"
   python = "^3.9"
 
 [tool.poetry.group.dev.dependencies]
