--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@
   version     = "0.1.0"
 
 [tool.poetry.dependencies]
-  numpy  = "^2.0.0"
-  python = "^3.9"
+  argparse = "^1.4.0"
+  numpy    = "^2.0.0"
+  python   = "^3.9"
 
 [tool.poetry.group.dev.dependencies]
   pre-commit = "^3.7.1"
@@ -16,3 +17,6 @@
 [build-system]
   build-backend = "poetry.core.masonry.api"
   requires      = ["poetry-core"]
+
+[tool.poetry.scripts]
+  example-python-package = "example_python_package.example:main"
