--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@
 
 [tool.poetry.group.dev.dependencies]
   pre-commit = "^3.7.1"
+  pytest     = "^8.2.2"
 
 [build-system]
   build-backend = "poetry.core.masonry.api"
