--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -5,31 +5,54 @@ on:
     branches:
       - main
 jobs:
+  # Run unit tests on a variety of different OS and Python versions.
   unit-tests:
     name: Run Unit Tests
-    runs-on: ubuntu-latest
-    permissions:
-      checks: write
-      contents: read
-      issues: read
-      pull-requests: write
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-24.04]
+        python_version: ['3.9', '3.10', '3.11', '3.12']
+    
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4.1.7
-      - name: Setup Python
+      - name: Setup Python ${{ matrix.python_version }}
         uses: actions/setup-python@v5.1.0
         with:
-          python-version: '3.12'
+          python-version: ${{ matrix.python_version }}
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install poetry
           poetry install --with=dev
       - name: Run Unit Tests
-        run: poetry run pytest --junitxml=test_results/unit-results.xml
-      - name: Publish Results
+        run: poetry run pytest --junitxml=unit-results.xml
+      # Upload each version so that the publisher can collect everything
+      - name: Upload Results
+        if: always()
+        uses: actions/upload-artifact@v4.3.3
+        with:
+          name: Test Results (Python ${{ matrix.python_version }} - ${{ matrix.os }})
+          path: unit-results.xml
+  # Publish all the results across every OS and Python version.
+  publish-reports:
+    name: Publish Test Reports
+    needs: unit-tests
+    runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      contents: read
+      issues: read
+      pull-requests: write
+    if: always()
+    steps:
+      - name: Download Reports
+        uses: actions/download-artifact@v4.1.7
+        with:
+          path: artifacts
+      - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2.16.1
         with:
-          files: |
-            test_results/unit-results.xml
-        
+          files: "artifacts/**/*.xml"
