--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,18 @@
   pre-commit = "^3.7.1"
   pytest     = "^8.2.2"
   pytest-cov = "^5.0.0"
+  ruff       = "^0.4.10"
 
 [tool.poetry.scripts]
   example-python-package = "example_python_package.example:main"
+
+[tool.ruff]
+  line-length    = 79
+  src            = ["src", "tests"]
+  target-version = "py39"
+
+[tool.ruff.lint]
+  extend-select = ["ALL"]
+
+[tool.ruff.lint.pydocstyle]
+  convention = "pep257"
