--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, windows-2022]
-        python_version: ['3.9', '3.10', '3.11', '3.12']
+        python_version: ['3.10', '3.11', '3.12']
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4.1.7
