refactor: make separate dependency group for docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,9 @@
   version     = "0.1.0"
 
 [tool.poetry.dependencies]
-  argparse         = "^1.4.0"
-  numpy            = "^1.26.4"
-  python           = "^3.10"
-  sphinx-rtd-theme = "^2.0.0"
+  argparse = "^1.4.0"
+  numpy    = "^1.26.4"
+  python   = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
   nox        = "^2024.4.15"
@@ -29,7 +28,10 @@
   pytest     = "^8.2.2"
   pytest-cov = "^5.0.0"
   ruff       = "^0.4.10"
-  sphinx     = "^7.3.7"
+
+[tool.poetry.group.doc.dependencies]
+  sphinx           = "^7.3.7"
+  sphinx-rtd-theme = "^2.0.0"
 
 [tool.poetry.scripts]
   example-python-package = "example_python_package.example:main"
