docs: finish making README.rst

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,11 @@
         "editor.formatOnSave": true
     },
     "cSpell.words": [
+        "backlinks",
         "docstrings",
         "intersphinx",
         "Jolowicz's",
+        "noxfile",
         "pyenv",
         "pyproject",
         "toctree",
