fix: update readme extension in Poetry configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@
   description = "A template for a modern Python package."
   license     = "MIT"
   name        = "example-python-package"
-  readme      = "README.md"
+  readme      = "README.rst"
   version     = "0.1.0"
 
 [tool.poetry.dependencies]
@@ -33,10 +33,9 @@
   sphinx           = "^7.3.7"
   sphinx-rtd-theme = "^2.0.0"
 
-
 [tool.poetry.group.docs.dependencies]
-esbonio = "^0.16.4"
-rstcheck = "^6.2.1"
+  esbonio  = "^0.16.4"
+  rstcheck = "^6.2.1"
 
 [tool.poetry.scripts]
   example-python-package = "example_python_package.example:main"
