--- a/.github/workflows/main-merge.yml
+++ b/.github/workflows/main-merge.yml
@@ -1,4 +1,5 @@
-name: Release Drafter
+# Various jobs that run when a new commit is pushed to the main branch.
+name: Main Merge
 on:
   push:
     branches:
@@ -6,6 +7,7 @@ on:
 permissions:
   contents: read
 jobs:
+  # Update the release draft with the latest changes.
   update_release_draft:
     name: Update Release Draft
     permissions:
