--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,11 +33,7 @@ jobs:
       - name: Build Docs
         working-directory: docs
         run: poetry run make html
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: 'docs/build'
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          path: docs/build/html
