build: add pages details about environment
Signed-off-by: Kyle M. Hart <kylemhart@gmail.com>

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,6 +14,9 @@ concurrency:
   cancel-in-progress: false
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -34,6 +37,7 @@ jobs:
         working-directory: docs
         run: poetry run make html
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/upload-pages-artifact@v3.0.1
         with:
           path: docs/build/html
