--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -36,11 +36,5 @@ jobs:
       - name: Build Docs
         working-directory: docs
         run: poetry run make html
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: 'docs/build/html'
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: sphinx-notes/pages@v3
