--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,5 +33,9 @@ jobs:
       - name: Build Docs
         working-directory: docs
         run: poetry run make html
-      - name: Deploy to GitHub Pages
-        uses: sphinx-notes/pages@v3
+      - name: Upload Documentation
+        uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          path: docs/build/html/
+      - name: Deploy Documentation
+        uses: actions/deploy-pages@v4.0.5
