--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   release:
     types: [published]
 permissions:
-  contents: read
+  contents: write
 jobs:
   # Deploy the package to TestPyPi.
   publish-package:
